# nxpkgr

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix  shell.nix
data/: example_config.toml  test_config.toml
pico-args/: Cargo.toml
src/: extensions.rs  license.rs  main.rs  package.rs
src/nix/: license.rs  mod.rs  package.rs  platforms.rs
src/package/: config.rs  error.rs  github.rs  mod.rs  openvsx.rs  settings.rs  vsmarketplace.rs
src/sources/: github.rs  mod.rs  openvsx.rs  vscodemarketplace.rs
