[package]
name = "nxpkgr"
version = "0.1.0"
authors = ["Th3Whit3Wolf <the.white.wolf.is.1337@gmail.com>"]
edition = "2018"
description = "A nix source generator"
readme = "README.md"
homepage = "https://github.com/Th3Whit3Wolf/nixosInstaller"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol = "1.2.5"
async-channel = "1.6.1"
surf = { version = "2.2.0", default-features = false, features = ["h1-client-rustls"] }
anyhow = "1.0.42"
toml = "0.5.8"
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"
tempfile = "3.2.0"
ring = "0.16.20"
data-encoding = "2.3.2"