[package]
name = "nxpkgr"
version = "0.1.0"
authors = ["Th3Whit3Wolf <the.white.wolf.is.1337@gmail.com>"]
edition = "2018"
description = "A nix source generator"
readme = "README.md"
homepage = "https://github.com/Th3Whit3Wolf/nixosInstaller"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.4", default-features = false, features = [ "rustls-tls", "json" ] }
anyhow = "1.0.42"
toml = "0.5.8"
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"
tempfile = "3.2.0"
pulldown-cmark = "0.8.0"
roxmltree = "0.14.1"
octocrab = { version = "0.11.0", default-features = false, features = [ "rustls" ]} 
#derive_more = {version = "0.99.16", default-features = false, features = ["display"]}